footer & scrollbar fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -28,6 +28,22 @@
     0 0 150px rgba(18, 247, 255, 0.3);
 }
 
+::-webkit-scrollbar{
+    height: 0;
+    width: .5rem;
+}
+
+::-webkit-scrollbar-track {
+    background: var(--secon-bg-color);
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--hover-color);
+    border-radius: 5px;
+}
+
+
+
 body{
     font-family: "Poppins",sans-serif;
     background-color: var(--bg-color);
@@ -168,7 +184,7 @@ section{
     height: 45px;
 }
 
-.btn-box a.btn{
+.btn-box .btn{
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -187,11 +203,11 @@ section{
     border: 2px solid var(--hover-color);
 }
 
-a.btn:hover{
+.btn:hover{
     color: var(--hover-color);
 }
 
-    a.btn::before{
+    .btn::before{
         content: "";
         position: absolute;
         top: 0;
@@ -203,16 +219,16 @@ a.btn:hover{
         transition: .4s;
     }
 
-    a.btn:hover::before{
+    .btn:hover::before{
         width: 100%;
     }
 
-a.btn:nth-child(2){
+.btn:nth-child(2){
     background-color: var(--bg-color);
     color: var(--hover-color);
 }
 
-a.btn:nth-child(2):hover{
+.btn:nth-child(2):hover{
     color: var(--bg-color);
 }
 
@@ -280,7 +296,7 @@ a.btn:nth-child(2)::before{
 
 .img-box img{
     width: 100%;
-    max-width: 350px;
+    max-width: 450px;
     height: auto;
 }
 
@@ -689,9 +705,79 @@ a.btn:nth-child(2)::before{
     outline: 2px solid #fff;
 }
 
-.port-content i{
-
+.port-content a i{
+    font-size: 1.3rem;
+    color: var(--secon-bg-color);
 }
+
+/* Contact section css  */
+.contant{
+    background: var(--secon-bg-color);
+    width: 100%;
+}
+
+.contant form{
+    text-align: center;
+    max-width: 50rem;
+    margin: 1rem auto;
+    margin-bottom: 3rem;
+}
+
+.contant form input,
+.contant form textarea{
+    width: 100%;
+    color: var(--text-color);
+    background: var(--bg-color);
+    margin-bottom: .8rem;
+    border: none;
+    border-radius: 5px;
+    padding: .7rem;
+}
+
+.contant form textarea{
+    resize: none;
+}
+
+.formBtn{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.formBtn .btn{
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+/* footer css  */
+footer{
+    padding: 1.5rem 10%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+footer p{
+    color: #bdbdbd;
+}
+
+footer a{
+    display: inline-flex;
+    justify-content: center;
+    color: var(--text-color);
+    background: var(--hover-color);
+    padding: .6rem;
+    border-radius: 5px;
+}
+
+footer a i{
+    font-size: 1rem;
+    color: var(--secon-bg-color);
+}
+
+
+
+
 
 
 
